2005-07-26  Johan Dahlin  <jdahlin@async.com.br>

	* examples/lang.glade:
	* examples/slaves.py:
	* kiwi/interfaces.py:
	* kiwi/ui/views.py:
	* kiwi/ui/widgets/proxy.py:
	Add per view validation, including example. Fixes #2096
	r=kiko
	
2005-07-15  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/widgets/list.py (Column): Almost a complete rewrite,
	using a GObject and properties.

	* kiwi/utils.py: Add a new PropertyObject, fix gproperty to work
	with float,int and enums

2005-07-14  Johan Dahlin  <jdahlin@async.com.br>

	* tests/test_utils.py (SliceTest): Add tests for slicerange
	* kiwi/ui/widgets/list.py: Clean up treemodel usage, use python api
	and define COL_MODEL as 0 and use it everywhere
	(List.__getitem__): Fix slicing once and for all.

2005-07-13  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/widgets/list.py (List.add_list): Remove selection,
	GtkTreeView is different from a GtkCList, if this turns out to be
	a problem we'll rewrite/readd this code.
	(List.get_column_by_name): New method
	(List.__init__): require a list or column, tuples are not allowed
	(List.add_instance): Remove selection restore here aswell
	(List.__getitem__): Oh my, fix slicing.

2005-07-12  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/widgets/list.py (List.__contains__): Clean up, 
	use == instead of is
	(List.__setitem__, List.__getitem__): Support strings, refactor
	(List.__iter__): Impl.
	(List.get_selected, List.get_selected_rows): Separate, mimic gtk+
	closely.
	(List.__init__): Select first item in list if we selection is allowed
	and we're inserting a list.

2005-07-11  Johan Dahlin  <jdahlin@async.com.br>

	* examples/completion.py:
	* gazpacho-plugin/kiwi2.xml: 
	* kiwi/ui/widgets/entry.py:

	Add entry completion support and a small example.

== 1.9.0 released ==
2005-06-28  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/__init__.py: Kill pygtk.require() it won't be missed since 
	all systems which we can run on has pygtk 2.x installed as default. 